2023_introduction/ch5/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: hwchiu/netutils
