2023_introduction/ch5/service3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis3
spec:
  selector:
    matchLabels:
      app: redis3
  replicas: 2
  template:
    metadata:
      labels:
        app: redis3
    spec:
      containers:
      - name: redis
        image: redis:6.0.9
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: redis3
spec:
  selector:
    app: redis3
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    nodePort: 30007
  type: NodePort
